[gd_scene load_steps=12 format=3 uid="uid://dctlbeewt20al"]

[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/pimnet_screen_gui.gd" id="1_c673j"]
[ext_resource type="Resource" uid="uid://gbog628nbm3b" path="res://core/pimnet/pimnet_screen_gui/default_pimnet_setup.tres" id="2_vdsxu"]
[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/reversion_menu.gd" id="3_frqen"]
[ext_resource type="Script" path="res://general/behaviors/button_enabler.gd" id="4_xsv50"]
[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/goal_panel.gd" id="5_elvn2"]
[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/tool_panel.gd" id="5_phkoh"]
[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/creation_panel.gd" id="8_hkpbi"]
[ext_resource type="Script" path="res://core/pimnet/pimnet_screen_gui/plan_panel.gd" id="9_pni1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3j2q4"]
content_margin_left = 20.0
content_margin_right = 20.0

[sub_resource type="ButtonGroup" id="ButtonGroup_2gtkw"]
allow_unpress = true

[sub_resource type="ButtonGroup" id="ButtonGroup_0llqm"]

[node name="PimnetScreenGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c673j")
setup_resource = ExtResource("2_vdsxu")

[node name="MainMenuPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
title = "Main Menu"
initial_position = 1
size = Vector2i(300, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 296.0

[node name="Label" type="Label" parent="MainMenuPopup/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MainMenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="MainMenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 10
text = "Quit Level"

[node name="CompletionPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
title = "Completion Menu"
initial_position = 1
size = Vector2i(320, 200)

[node name="VBoxContainer" type="VBoxContainer" parent="CompletionPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 316.0
offset_bottom = 196.0

[node name="Label" type="Label" parent="CompletionPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Level Complete!"

[node name="HBoxContainer" type="HBoxContainer" parent="CompletionPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StayButton" type="Button" parent="CompletionPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stay Here"

[node name="SelectLevelButton" type="Button" parent="CompletionPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select Level"

[node name="NextLevelButton" type="Button" parent="CompletionPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Level"

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TopLeft" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReversionMenu" type="PanelContainer" parent="TopBar/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_frqen")

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/TopLeft/ReversionMenu"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="TopBar/TopLeft/ReversionMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Undo"
text = "Undo"
clip_text = true

[node name="RedoButton" type="Button" parent="TopBar/TopLeft/ReversionMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Redo"
text = "Redo"
clip_text = true

[node name="ResetButton" type="Button" parent="TopBar/TopLeft/ReversionMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Reset"
text = "Reset"
clip_text = true

[node name="ButtonEnabler" type="Node" parent="TopBar/TopLeft/ReversionMenu"]
script = ExtResource("4_xsv50")

[node name="TitlePanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LevelTitle" type="Label" parent="TopBar/TitlePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3j2q4")
text = "Level Title"
horizontal_alignment = 1

[node name="TopRight" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MainMenuButton" type="Button" parent="TopBar/TopRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Main Menu"
text = "Main Menu"
clip_text = true

[node name="PanelBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -50.0
mouse_filter = 2

[node name="PanelBarLeft" type="HBoxContainer" parent="PanelBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="InventoryPanel" type="PanelContainer" parent="PanelBar/PanelBarLeft"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarLeft/InventoryPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarLeft/InventoryPanel/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="ToolPanel" type="PanelContainer" parent="PanelBar/PanelBarLeft"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("5_phkoh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarLeft/ToolPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer"]
layout_mode = 2
text = "Tools"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="ToolButton1" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton2" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton3" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton4" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton5" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton6" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton7" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton8" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton9" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton10" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton11" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton12" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton13" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton14" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="ToolButton15" type="Button" parent="PanelBar/PanelBarLeft/ToolPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2gtkw")
text = "Tool"
text_overrun_behavior = 1

[node name="CreationPanel" type="PanelContainer" parent="PanelBar/PanelBarLeft"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("8_hkpbi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarLeft/CreationPanel"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer"]
layout_mode = 2
text = "Create Objects"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
columns = 3

[node name="CreateButton1" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="CreateButton2" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="CreateButton3" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="CreateButton4" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="CreateButton5" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="CreateButton6" type="Button" parent="PanelBar/PanelBarLeft/CreationPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
action_mode = 0
keep_pressed_outside = true
text = "Object"
flat = true
text_overrun_behavior = 1

[node name="TranslationPanel" type="PanelContainer" parent="PanelBar/PanelBarLeft"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarLeft/TranslationPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarLeft/TranslationPanel/VBoxContainer"]
layout_mode = 2
text = "Translate"
horizontal_alignment = 1

[node name="PanelBarRight" type="HBoxContainer" parent="PanelBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="PlanPanel" type="PanelContainer" parent="PanelBar/PanelBarRight"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("9_pni1e")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer"]
layout_mode = 2
text = "Plan"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_vertical = 4
follow_focus = true
horizontal_scroll_mode = 0

[node name="TaskList" type="VBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Task1" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task1CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task1Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 1"
alignment = 0
text_overrun_behavior = 1

[node name="Task2" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task2CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task2Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 2"
alignment = 0
text_overrun_behavior = 1

[node name="Task3" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task3CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task3Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 3"
alignment = 0
text_overrun_behavior = 1

[node name="Task4" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task4CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task4Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 4"
alignment = 0
text_overrun_behavior = 1

[node name="Task5" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task5CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task5Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 5"
alignment = 0
text_overrun_behavior = 1

[node name="Task6" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task6CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task6Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 6"
alignment = 0
text_overrun_behavior = 1

[node name="Task7" type="HBoxContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="Task7CheckBox" type="CheckBox" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="Task7Button" type="Button" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer/TaskList/Task7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_0llqm")
text = "Task 7"
alignment = 0
text_overrun_behavior = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TaskInstructions" type="Label" parent="PanelBar/PanelBarRight/PlanPanel/VBoxContainer/ScrollContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(292, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Instructions go here."
autowrap_mode = 3

[node name="GoalPanel" type="PanelContainer" parent="PanelBar/PanelBarRight"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("5_elvn2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBar/PanelBarRight/GoalPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelBar/PanelBarRight/GoalPanel/VBoxContainer"]
layout_mode = 2
text = "Goal"
horizontal_alignment = 1

[node name="CheckGoalButton" type="Button" parent="PanelBar/PanelBarRight/GoalPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Check"

[node name="ButtonEnabler" type="Node" parent="PanelBar/PanelBarRight/GoalPanel"]
script = ExtResource("4_xsv50")

[node name="BottomBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomLeft" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryButton" type="Button" parent="BottomBar/BottomLeft"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Inventory"
toggle_mode = true
text = "Inventory"
clip_text = true

[node name="ToolsButton" type="Button" parent="BottomBar/BottomLeft"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Tools"
toggle_mode = true
text = "Tools"
clip_text = true

[node name="CreationButton" type="Button" parent="BottomBar/BottomLeft"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Create Objects"
toggle_mode = true
text = "Create Objects"
clip_text = true

[node name="TranslationButton" type="Button" parent="BottomBar/BottomLeft"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Translate"
toggle_mode = true
text = "Translate"
clip_text = true

[node name="BottomRight" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PlanButton" type="Button" parent="BottomBar/BottomRight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Plan"
toggle_mode = true
text = "Plan"
clip_text = true

[node name="GoalButton" type="Button" parent="BottomBar/BottomRight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Goal"
toggle_mode = true
text = "Goal"
clip_text = true

[connection signal="pressed" from="MainMenuPopup/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenuPopup/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuPopup/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CompletionPopup/VBoxContainer/HBoxContainer/StayButton" to="." method="_on_stay_button_pressed"]
[connection signal="pressed" from="CompletionPopup/VBoxContainer/HBoxContainer/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="CompletionPopup/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="TopBar/TopLeft/ReversionMenu/HBoxContainer/UndoButton" to="TopBar/TopLeft/ReversionMenu" method="_on_undo_button_pressed"]
[connection signal="pressed" from="TopBar/TopLeft/ReversionMenu/HBoxContainer/RedoButton" to="TopBar/TopLeft/ReversionMenu" method="_on_redo_button_pressed"]
[connection signal="pressed" from="TopBar/TopLeft/ReversionMenu/HBoxContainer/ResetButton" to="TopBar/TopLeft/ReversionMenu" method="_on_reset_button_pressed"]
[connection signal="pressed" from="TopBar/TopRight/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
